Removed superfluos page details

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,10 @@
-name: Christmas Recipes
+name: Statistical Models
 markdown: redcarpet
 pygments: true
-baseurl: /christmas-recipes
+baseurl: /Book
+defaults:
+  -
+    scope:
+      path: "" # an empty string here means all files in the project
+    values:
+      layout: "default"
